<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/refreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.Weather.WeatherFragment">

        <Button
            android:id="@+id/findButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:text="@string/find"
            android:backgroundTint="@color/light_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

        <TextView
            style="@style/textPattern"
            android:id="@+id/cityNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/city"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/findButton" />

        <TextView
            style="@style/textPattern"
            android:id="@+id/tempTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/temp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cityNameTextView" />

        <TextView
            style="@style/textPattern"
            android:id="@+id/weatherTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/weather"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tempTextView" />

        <TextView
            style="@style/textPattern"
            android:id="@+id/windSpeedTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/wind"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weatherTextView" />

        <TextView
            style="@style/textPattern"
            android:id="@+id/humidityTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/humidity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/windSpeedTextView" />

        <TextView
            style="@style/textPattern"
            android:id="@+id/sunriseTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/sunrise"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/humidityTextView" />

        <TextView
            style="@style/textPattern"
            android:id="@+id/sunsetTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/sunset"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sunriseTextView" />

        <TextView
            android:id="@+id/cityName"
            style="@style/textPattern"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/cityNameTextView"
            app:layout_constraintStart_toStartOf="@+id/findButton" />

        <TextView
            android:id="@+id/temp"
            style="@style/textPattern"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/tempTextView"
            app:layout_constraintStart_toStartOf="@+id/findButton" />

        <TextView
            android:id="@+id/weather"
            style="@style/textPattern"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/weatherTextView"
            app:layout_constraintStart_toStartOf="@+id/findButton" />

        <TextView
            android:id="@+id/windSpeed"
            style="@style/textPattern"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/windSpeedTextView"
            app:layout_constraintStart_toStartOf="@+id/findButton" />

        <TextView
            android:id="@+id/humidity"
            style="@style/textPattern"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/humidityTextView"
            app:layout_constraintStart_toStartOf="@+id/findButton" />

        <TextView
            android:id="@+id/sunrise"
            style="@style/textPattern"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/sunriseTextView"
            app:layout_constraintStart_toStartOf="@+id/findButton" />

        <TextView
            android:id="@+id/sunset"
            style="@style/textPattern"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/sunsetTextView"
            app:layout_constraintStart_toStartOf="@+id/findButton" />

        <EditText
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="75dp"
            android:layout_marginEnd="15dp"
            android:ems="15"
            android:hint="Input your city"
            android:padding="10dp"
            android:inputType="textPersonName"
            android:background="@drawable/text_field"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="120dp"
            android:letterSpacing="1.2"
            android:text="@string/splashScreenText"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/light_gray"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>